src/snapshots/tests__tests::test_fof_annotated-2.snap
---
created: "2019-06-11T12:13:10.550324249Z"
creator: insta@0.8.1
source: src/tests.rs
expression: parsed
---
Fof(
    LowerWord(
        "test"
    ),
    Axiom,
    Boolean(
        true
    ),
    Some(
        Annotations {
            source: Unknown
        }
    )
)
