src/snapshots/tests__tests::test_fof_annotated.snap
---
created: "2019-06-11T12:13:10.538536022Z"
creator: insta@0.8.1
source: src/tests.rs
expression: parsed
---
Fof(
    LowerWord(
        "test"
    ),
    Axiom,
    Boolean(
        true
    ),
    None
)
