src/snapshots/tests__tests::test_fof_atomic_formula-2.snap
---
created: "2019-06-11T12:13:10.554400277Z"
creator: insta@0.8.1
source: src/tests.rs
expression: parsed
---
Infix(
    Equal,
    Functor(
        LowerWord(
            "f"
        ),
        [
            Variable(
                Variable(
                    "X"
                )
            )
        ]
    ),
    Variable(
        Variable(
            "Y"
        )
    )
)
