src/snapshots/tests__tests::test_fof_atomic_formula-3.snap
---
created: "2019-06-11T12:13:10.562770087Z"
creator: insta@0.8.1
source: src/tests.rs
expression: parsed
---
Predicate(
    LowerWord(
        "p"
    ),
    [
        Variable(
            Variable(
                "X"
            )
        )
    ]
)
