src/snapshots/tests__tests::test_fof_atomic_formula-4.snap
---
created: "2019-06-11T12:13:10.570392566Z"
creator: insta@0.8.1
source: src/tests.rs
expression: parsed
---
Infix(
    NotEqual,
    Variable(
        Variable(
            "X"
        )
    ),
    Variable(
        Variable(
            "Y"
        )
    )
)
