src/snapshots/tests__tests::test_fof_defined_atomic_formula-2.snap
---
created: "2019-06-11T12:13:10.555309192Z"
creator: insta@0.8.1
source: src/tests.rs
expression: parsed
---
Boolean(
    false
)
