src/snapshots/tests__tests::test_fof_defined_atomic_formula.snap
---
created: "2019-06-11T12:13:10.546525319Z"
creator: insta@0.8.1
source: src/tests.rs
expression: parsed
---
Boolean(
    true
)
