src/snapshots/tests__tests::test_fof_function_term.snap
---
created: "2019-06-11T12:13:10.546538686Z"
creator: insta@0.8.1
source: src/tests.rs
expression: parsed
---
Functor(
    LowerWord(
        "f"
    ),
    [
        Variable(
            Variable(
                "X"
            )
        )
    ]
)
