src/snapshots/tests__tests::test_fof_logic_formula-2.snap
---
created: "2019-07-19T14:49:02.940668414Z"
creator: insta@0.8.1
source: src/tests.rs
expression: parsed
---
NonAssoc(
    LRImplies,
    Proposition(
        LowerWord(
            "p"
        )
    ),
    Proposition(
        LowerWord(
            "q"
        )
    )
)
