src/snapshots/tests__tests::test_fof_logic_formula-3.snap
---
created: "2019-07-19T14:49:26.582717488Z"
creator: insta@0.8.1
source: src/tests.rs
expression: parsed
---
Assoc(
    And,
    [
        Proposition(
            LowerWord(
                "p"
            )
        ),
        Proposition(
            LowerWord(
                "q"
            )
        )
    ]
)
